# T212AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260427_0001_add_pending_actions.py  20260427_0002_add_proposals_and_journaling.py  20260428_0003_add_reconciliation_metadata.py  20260428_0004_generic_broker_refs.py
docker/searxng/: limiter.toml  settings.yml
docs/: AGENTIC_FLOW.md  AGENTIC_LOGIC.md  AGENT_DESIGN.md  AGENT_INTERPOLATION.md  AGENT_PATTERNS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_STATUS.md  DATA_SOURCES.md  DEV_GUIDELINES.md  FEATURES.md  NEWS_AND_WEBSEARCH.md  OPEN_QUESTIONS.md  PLAN.md  README.md  REPO_STRUCTURE.md  SCHEDULER_DESIGN_NOTES.md  T212ApiDocs.md  todo.md
docs/agents/: AGENTIC_FLOW.md  AGENTIC_LOGIC.md  AGENT_INTERPOLATION.md
docs/ai-engineering/: README.md
docs/api/: T212ApiDocs.md
docs/architecture/: AGENT_DESIGN.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_STATUS.md  REPO_STRUCTURE.md
docs/configuration/: CLI_CONFIGURATION_WALKTHROUGH.md
docs/planning/: FEATURES.md  PLAN.md  TODO.md
docs/scheduler/: SCHEDULER_PROCESS_CATALOG.md
logs/: log_trace.jsonl
scripts/: alpaca_news_stream_capture.py  check_trading212_instrument_resolution.py  dev_bot.py  docker_entrypoint.sh  reddit_tool_outputs.py  smoke_tools.py
src/t212ai/: __init__.py  __main__.py  cli.py
tests/integration/: test_broker_backend_live.py
tests/unit/: test_agent_architecture.py  test_alpaca_broker.py  test_alpaca_market_data.py  test_alpaca_news.py  (+39 more)
(+252 files in other folders)
